# hh666

./: .gitignore  Cargo.toml  README.md  fpe_TEST.py  img_generator_BROKEN.py  square_N.py  task.txt  test.txt
src/: img_generator.py  main.rs
v2/: v2.txt
v2/output/: v2-bg-color.txt  v2-bg-colors-test-ctrl.txt  v2-fg-color.txt  v2-fgbg-color-full.txt  v2-fgbg-color.txt  v2-fgbg-random.txt
v2/scripts/: display-fgbg-random.sh  v2-bg-color.py  v2-fg-color.py  v2-fgbg-color.py  v2-fgbg-random.py
