[package]
name = "hh666"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha3 = "0.10.0"
rand = "^0.8.4"
clap = { version = "4.2.1", features = ["derive"] }
image = "0.24.6"
chrono = "0.4.24"
cargo-watch = "8.4.0"
